# JinuxML

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md  main.cpp
include/Core/: Error.hpp  Graph.hpp
include/Core/Errors/: InvalidUsageError.hpp  RuntimeError.hpp
include/Core/Errors/InvalidUsageErrors/: InvalidArgumentError.hpp
include/Core/Errors/RuntimeErrors/: MemoryAllocationError.hpp
include/JinuxML/Core/Error/: Error.hpp
include/JinuxML/Core/Error/Errors/: InvalidUsageError.hpp  RuntimeError.hpp
include/JinuxML/Core/Graph/: ComputationalGraph.hpp  Element.hpp  Executor.hpp
include/JinuxML/Core/Graph/Elements/: Edge.hpp  Vertex.hpp
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Error.cpp  Graph.cpp
src/Core/Errors/: CMakeLists.txt  InvalidUsageError.cpp  RuntimeError.cpp
src/Core/Errors/InvalidUsageErrors/: CMakeLists.txt  InvalidArgumentError.cpp
src/Core/Errors/RuntimeErrors/: CMakeLists.txt  MemoryAllocationError.cpp
src/Core/Graph/: CMakeLists.txt  ComputationalGraph.cpp  Element.cpp  Executor.cpp
src/Core/Graph/Elements/: CMakeLists.txt
tests/: CMakeLists.txt  JinuxMLTest.cpp
